moved margins to @media queries for small screens to fix mobile cutting issue.  Resizing issue is cropping up even without fullscreen toggle with button placement if screensize changes.  maybe theres a cureall snippet for these things

--- a/src/components/EraseBtn/erasebtn.css
+++ b/src/components/EraseBtn/erasebtn.css
@@ -1,5 +1,4 @@
 .eraseBtn {
-  margin: 1vh;
   position: absolute;
   bottom: 1vh;
   left: 1vh;
@@ -19,4 +18,10 @@
   transform: scale(0.9);
   box-shadow: 1px 1px 2px black;
   background-color: #ff9999;
+}
+
+@media screen and (max-width: 500px) {
+  .eraseBtn {
+    margin: 1vh;
+  }
 }
