--- a/src/components/OptionsBtn/optionsbtn.css
+++ b/src/components/OptionsBtn/optionsbtn.css
@@ -1,5 +1,4 @@
 .optionsBtn {
-  margin: 1vh;
   position: absolute;
   top: 1vh;
   right: 1vh;
@@ -19,4 +18,10 @@
   transform: scale(0.9);
   box-shadow: 1px 1px 2px black;
   background-color: #ADD8E6;
+}
+
+@media screen and (max-width: 500px) {
+  .optionsBtn {
+    margin: 1vh;
+  }
 }
